--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,44 @@
-version: "3.7"
+version: '3.8'
+
 services:
   postgres:
-    container_name: postgres
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_USER=postgres
+      - TZ=America/Montreal
       - POSTGRES_PASSWORD=postgres
-    logging:
-      options:
-        max-size: 10m
-        max-file: "3"
-    ports:
-      - "5432:5432"
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=mydb
     volumes:
       - ./data/postgres-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    ports:
+      - 5432:5432
+
 
   pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:latest
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
-    ports:
-      - "5050:80"
+      PGADMIN_DEFAULT_EMAIL : admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD : admin
     volumes:
       - ./data/pgadmin-data:/var/lib/pgadmin
+    ports:
+      - 5000:80
+    depends_on:
+      - postgres
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # environment:
+    #   - POSTGRES_HOST=db
+    #   - POSTGRES_USER=postgres
+    #   - POSTGRES_PASSWORD=postgres
+    #   - POSTGRES_DB=mydb
+    #   - POSTGRES_PORT=5432
+    ports:
+      - 8000:8000
+    depends_on:
+      - postgres
