--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,1 +1,20 @@
-## To implement
+repos:
+-   repo: https://github.com/pycqa/pylint
+    rev: v2.10.2
+    hooks:
+    -   id: pylint
+        args: ['src/**/*.py']
+
+-   repo: https://github.com/psf/black
+    rev: 23.3.0
+    hooks:
+    -   id: black
+        args: ['src/**/*.py']
+
+# -   repo: local
+#     hooks:
+#     -   id: run-unit-tests
+#         name: Run unit tests
+#         entry: pipenv run test
+#         language: system
+#         pass_filenames: false
