--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,15 +29,10 @@ services:
       - postgres
 
   app:
+    image: oxygen-cs:1.0
     build:
       context: .
       dockerfile: Dockerfile
-    # environment:
-    #   - POSTGRES_HOST=db
-    #   - POSTGRES_USER=postgres
-    #   - POSTGRES_PASSWORD=postgres
-    #   - POSTGRES_DB=mydb
-    #   - POSTGRES_PORT=5432
     ports:
       - 8000:8000
     depends_on:
