--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      - TZ=America/Montreal
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=mydb
+      TZ: ${TZ}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./data/postgres-data:/var/lib/postgresql/data
     ports:
@@ -27,6 +27,7 @@ services:
       - 5000:80
     depends_on:
       - postgres
+
 
   app:
     image: oxygen-cs:1.0
