--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,6 @@ repos:
     hooks:
     -   id: run-unit-tests
         name: Run unit tests
-        entry: .venv/Scripts/pytest.exe
+        entry: venv/Scripts/pytest.exe
         language: system
         pass_filenames: false
