--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,9 +21,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run unit tests
-      run: |
-        pytest
+    # - name: Run unit tests
+    #   run: |
+    #     pytest
 
     - name: Code static analysis and formatting
       run: |
