--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         pip install black
         pip install "pylint==v3.0.2"
-        find src -name '*.py' | xargs pylint --rcfile=.pylintrc
+        find src -name '*.py' | xargs pylint --disable=W3101 --rcfile=.pylintrc
         black src
         
   # docker_build:
