--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+      
+    - name: Set up virtual environment
+      run: python -m venv venv
+
+    - name: Activate virtual environment
+      run: source .venv/bin/activate
+
+    - name: Run unit tests
+      run: |
+        .venv/Scripts/pytest.exe
 
     # - name: Run unit tests
     #   run: |
@@ -35,21 +45,21 @@ jobs:
       if: failure()
       run: exit 1
         
-  # docker_build:
-  #   needs: build
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Build Docker image
-  #     run: |
-  #       docker build -t oxygen-cs:latest -t oxygen-cs:1.0 .
+  docker_build:
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Build Docker image
+      run: |
+        docker build -t oxygen-cs:latest -t oxygen-cs:1.0 .
         
-  # docker_deploy:
-  #   needs: docker_build
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Deploy to DockerHub
-  #     run: |
-  #       docker push oxygen-cs:latest
+  docker_deploy:
+    needs: docker_build
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Deploy to DockerHub
+      run: |
+        docker push oxygen-cs:latest
   #       docker push oxygen-cs:1.0
