--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,11 +25,11 @@ jobs:
       run: python -m venv venv
 
     - name: Activate virtual environment
-      run: source .venv/bin/activate
+      run: source venv/bin/activate
 
     - name: Run unit tests
       run: |
-        .venv/Scripts/pytest.exe
+        venv/Scripts/pytest.exe
 
     # - name: Run unit tests
     #   run: |
