--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,6 +18,10 @@ jobs:
           - 5432:5432
 
     steps:
+
+    - name: Test Secrets
+      run: echo "$POSTGRES_USER"
+    
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -28,13 +32,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        echo $POSTGRES_USER
-        echo $POSTGRES_PASSWORD
-        echo $POSTGRES_DB
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest
-        pip install psycopg2-binary 
 
     - name: Run unit tests
       run: |
