--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
     - name: Test Secrets
-      run: echo "$POSTGRES_USER"
+      run: echo $POSTGRES_USER
     
     - name: Checkout code
       uses: actions/checkout@v2
