--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -58,7 +58,8 @@ jobs:
     steps:
     - name: Build Docker image
       run: |
-        docker build -t oxygen-cs:1.0 .
+        # docker build -t oxygen-cs:1.0 .
+        docker build . --file Dockerfile --tag oxygen-cs:1.0 .
         
   docker_deploy:
     needs: docker_build
