--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,9 +11,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: ${{secrets.POSTGRES_USER}}
-          POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-          POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
 
@@ -58,8 +58,7 @@ jobs:
     steps:
     - name: Build Docker image
       run: |
-        # docker build -t oxygen-cs:1.0 .
-        docker build . --file Dockerfile --tag oxygen-cs:1.0 .
+        docker build -t oxygen-cs:1.0 .
         
   docker_deploy:
     needs: docker_build
