--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,19 +11,13 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          # POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          # POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          # POSTGRES_DB: ${{ secrets.POSTGRES_DB 
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: mydb
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
 
     steps:
-
-    - name: Test Secrets
-      run: echo "hello , $POSTGRES_USER"
     
     - name: Checkout code
       uses: actions/checkout@v2
