--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v3   
       with:
-        push: false
+        push: true
         tags: oxygen-cs:1.0
