--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,15 +53,42 @@ jobs:
     if: github.ref == 'refs/heads/feature-14-cicd-pipeline'
     runs-on: ubuntu-latest
     steps:
-    - name: Build Docker image
-      run: |
-        docker build -t oxygen-cs:1.0 .
+
+    - name: Login
+      uses: docker/login-action@v1
+      with:
+        username: gregoire.maschio.1.@ens.etsmtl.ca
+        password: dckr_pat_TGmhydAC0WZK-O_VfRblfa86sGE
         
+    # - name: Build Docker image
+    #   run: |
+    #     docker build -t oxygen-cs:1.0 .
+
+    - name: Build Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: false
+        load: true
+        tags: oxygen-cs:1.0
+
   docker_deploy:
     needs: docker_build
     if: github.ref == 'refs/heads/feature-14-cicd-pipeline'
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to DockerHub
-      run: |
-        docker push oxygen-cs:1.0
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: oxygen-cs:1.0
+        
+  # docker_deploy:
+  #   needs: docker_build
+  #   if: github.ref == 'refs/heads/feature-14-cicd-pipeline'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Deploy to DockerHub
+  #     run: |
+  #       docker push oxygen-cs:1.0
