--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,8 +57,8 @@ jobs:
     - name: Login
       uses: docker/login-action@v1
       with:
-        username: gregoire.maschio.1.@ens.etsmtl.ca
-        password: dckr_pat_TGmhydAC0WZK-O_VfRblfa86sGE
+        username: "log680equipe7"
+        password: "dckr_pat_TGmhydAC0WZK-O_VfRblfa86sGE"
         
     # - name: Build Docker image
     #   run: |
