--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,13 +15,15 @@ jobs:
     - name: Login
       uses: docker/login-action@v1
       with:
-        username: "log680equipe7"
-        password: "dckr_pat_TGmhydAC0WZK-O_VfRblfa86sGE"
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3   
+    - name: Build Docker image
+      uses: docker/build-push-action@v2
       with:
-        push: true
+        context: .
+        push: false
+        load: true
         tags: oxygen-cs:1.0
 
   #   - name: Set up Python
