--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,25 @@ on:
       branches:
       - main
 
+# jobs:
+  # build:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - name: Check out code
+  #     uses: actions/checkout@v2
+
+  #   - name: Login to Docker Hub
+  #     uses: docker/login-action@v3
+  #     with:
+  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #   - name: Build and push Docker image
+  #     uses: docker/build-push-action@v3   
+  #     with:
+  #       push: true
+  #       tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,8 +38,6 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v3   
-      with:
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
+    - name: Build and push Docker compose
+      uses: actions/checkout@v3
+      run: docker-compose -f "docker-compose.yml" up -d --build
