--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=mydb
 
+# Docker Hub
+DOCKERHUB_USERNAME=log680equipe7
+
 # Oxygen-CS
 HOST=https://hvac-simulator-a23-y2kpq.ondigitalocean.app
 TOKEN=9vXWwTEL39
