--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,8 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker compose
+    - name: Build Docker-compose
       run: docker-compose -f "docker-compose.yml" up -d --build
+
+    - name: Push images to Docker Hub
+      run: docker-compose -f "docker-compose.yml" push    
