--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,7 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build Docker-compose
-      run: docker-compose -f "docker-compose.yml" up -d --build
+      uses: docker-compose -f "docker-compose.yml" up -d --build
       with:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
