--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
 
 
   app:
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
+    image: ${DOCKERHUB_USERNAME}/oxygen-cs:1.0
     build:
       context: . 
       dockerfile: Dockerfile
