--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,15 +49,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Set up Docker Compose
-      uses: docker/compose-action@v1
-      with:
-        compose-version: '1.29.2'
+    - name: Build Docker-compose
+      run: docker-compose -f "docker-compose.yml" up -d --build
 
-    - name: Build and push containers
-      run: |
-        docker-compose -f docker-compose.yml build
-        docker-compose -f docker-compose.yml push
+    - name: Push the app image to Docker Hub
+      run: docker-compose -f "docker-compose.yml" push app
+
+    - name: Start all services
+      run: docker-compose -f "docker-compose.yml" up -d
         
     # - name: Build and push Docker image
     #   uses: docker/build-push-action@v3   
