--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   postgres:
     image: postgres:latest
     restart: always
-    environment:
-      TZ: ${TZ}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
+    # environment:
+    #   TZ: ${TZ}
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    #   POSTGRES_USER: ${POSTGRES_USER}
+    #   POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./data/postgres-data:/var/lib/postgresql/data
     ports:
@@ -30,7 +32,7 @@ services:
 
 
   app:
-    image: oxygen-cs:1.0
+    image: ${DOCKERHUB_USERNAME}/oxygen-cs:1.0
     build:
       context: . 
       dockerfile: Dockerfile
