--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,21 @@ version: '3.8'
 
 services:
   postgres:
+    container_name: postgres_container
     image: postgres:latest
     restart: always
-    env_file:
-      - .env
-    # environment:
-    #   TZ: ${TZ}
-    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    #   POSTGRES_USER: ${POSTGRES_USER}
-    #   POSTGRES_DB: ${POSTGRES_DB}
+    environment:
+      TZ: ${TZ}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./data/postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
-
   pgadmin:
+    container_name: pgadmin_container
     image: dpage/pgadmin4:latest
     restart: always
     environment:
@@ -26,12 +25,11 @@ services:
     volumes:
       - ./data/pgadmin-data:/var/lib/pgadmin
     ports:
-      - 5000:80
-    depends_on:
-      - postgres
+      - 5050:80
 
 
   app:
+    container_name: oxygen-cs
     image: ${DOCKERHUB_USERNAME}/oxygen-cs:1.0
     build:
       context: . 
@@ -43,5 +41,3 @@ services:
       T_MIN: ${T_MIN}
     ports:
       - 8000:8000
-    depends_on:
-      - postgres
