--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,25 +5,6 @@ on:
       branches:
       - feature/14/workflows
 
-# jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - name: Check out code
-  #     uses: actions/checkout@v2
-
-  #   - name: Login to Docker Hub
-  #     uses: docker/login-action@v3
-  #     with:
-  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-  #   - name: Build and push Docker image
-  #     uses: docker/build-push-action@v3   
-  #     with:
-  #       push: true
-  #       tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +12,32 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest
+
+    - name: Run unit tests
+      run: |
+        pytest
+
+    - name: Code static analysis and formatting
+      run: |
+        pip install black
+        pip install "pylint==v3.0.2"
+        find src -name '*.py' | xargs pylint --rcfile=.pylintrc
+        black src
+        
+    - name: Prevent push on failure
+      if: failure()
+      run: exit 1
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
