--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Start all services
+      run: docker-compose -f "docker-compose.yml" up -d
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -51,5 +54,5 @@ jobs:
     - name: Push the app image to Docker Hub
       run: docker-compose -f "docker-compose.yml" push app
 
-    - name: Start all services
-      run: docker-compose -f "docker-compose.yml" up -d
+    # - name: Start all services
+    #   run: docker-compose -f "docker-compose.yml" up -d
