--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: mydb
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Check out code
       uses: actions/checkout@v2
@@ -54,5 +70,5 @@ jobs:
     - name: Push the app image to Docker Hub
       run: docker-compose -f "docker-compose.yml" push app
 
-    # - name: Start all services
-    #   run: docker-compose -f "docker-compose.yml" up -d
+    - name: Start all services
+      run: docker-compose -f "docker-compose.yml" up -d
