--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -2,15 +2,15 @@ name: CI-CD Pipeline
 
 on:
   push:
-      branches:
+    branches:
       - feature/14/workflows
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out code
+    - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Python
@@ -38,7 +38,12 @@ jobs:
     - name: Prevent push on failure
       if: failure()
       run: exit 1
-
+        
+  Deploy:
+    needs: Build
+    if: github.ref == 'refs/heads/feature-14-workflows'
+    runs-on: ubuntu-latest
+    steps:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
