--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,7 +3,7 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - feature/14/workflows
+      - main
 
 jobs:
   Build:
@@ -41,7 +41,7 @@ jobs:
         
   Deploy:
     needs: Build
-    if: github.ref == 'refs/heads/feature/14/workflows'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
     - name: Login to Docker Hub
@@ -54,4 +54,4 @@ jobs:
       uses: docker/build-push-action@v3   
       with:
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:1.0
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/oxygen-cs:latest
