--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,7 +3,7 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - main
+      - feature/14/workflows
 
 jobs:
   Build:
@@ -41,7 +41,7 @@ jobs:
         
   Deploy:
     needs: Build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature/14/workflows'
     runs-on: ubuntu-latest
     steps:
     - name: Login to Docker Hub
