--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -42,7 +42,7 @@ jobs:
         
   Deploy:
     needs: Build
-    if: github.ref == 'refs/heads/feature/14/workflows'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
     - name: Login to Docker Hub
