--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -3,10 +3,10 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - '*'
+      - feature/21B/kubernetes-deployment  # Run this workflow when there is a push to the dev branch
   pull_request:
-    types:
-      - closed
+    branches:
+      - feature/21B/kubernetes-deployment  # Run this workflow for pull requests targeting the dev branch
 
 jobs:
   Build:
@@ -44,7 +44,7 @@ jobs:
         
   Deploy:
     needs: Build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/feature/21B/kubernetes-deployment'
     runs-on: ubuntu-latest
     steps:
     - name: Login to Docker Hub
