--- a/kubernetes/postgres-secret.yaml
+++ b/kubernetes/postgres-secret.yaml
@@ -4,6 +4,8 @@ metadata:
   name: postgres-secret
 type: Opaque
 data:
+  POSTGRES_HOST: cG9zdGdyZXM=
+  POSTGRES_PORT: NTQzMg==
   POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_PASSWORD: cG9zdGdyZXM=
   POSTGRES_DB: bXlkYg==
