--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [pylint.messages control]
-disable=C0103, E0401, R0902, R0903, W3101, W0621
+disable=C0103, E0401, R0902, R0903, W3101, W0621, C0301
